--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen</title>
+    <title>Las MEJORES Excursiones, Tours y pasadias en Cartagena 2023 - TourOpen</title>
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
     <meta name="google-site-verification" content="moaq-zjEQeEECs574oodRtWr7fVVjgZu9tN5ZZdAVj4" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
-        content="tours en cartagena, tours, Caminatas, walking tour, free tour cartagena, pasadia baru, pasadias, pasadia, pasadía barú, colombia acuatica, tours en cartagena todo incluido, tours en cartagena de indias, tures, tours, tour, playa blanca, baru, islas del rosario, "
+        content="excursiones y tours en cartagena 2023, pasadia en cartagena, bora bora, borabora, baru, bora bora hotel, bora bora precios, isla bora bora, playa bora bora, borabora hotel, bora bora habitaciones, bora bora shop, viaje a bora bora todo incluido precio, luna de miel, luna de miel bora bora, islas bora bora cartagena, luna de miel en cartagena, islas del rosario hoteles, hospedaje islas del rosario, rosario cartagena, tour oceanario islas del rosario, playa tranquila baru pasadia, mejores hoteles islas del rosario, cholon islas del rosario, hoteles en bora bora, resort bora bora, viajes a bora bora, isla rosario, las islas del rosario, tour islas del rosario, tours en cartagena, tours, Caminatas, walking tour, free tour cartagena, pasadia baru, pasadias, pasadia, pasadía barú, colombia acuatica, tours en cartagena todo incluido, tours en cartagena de indias, tures, tours, tour, playa blanca, islas del rosario, isla bendita beach, isla de cholon, pasadía en cartagena económicos"
         name="keywords">
         <meta property="og:image" content="https://toursopen.netlify.app/img/2%20(1).jpg">
-    <meta content="Encuentra más de 100 Tours, Tures en Cartagena 2022, Tours económicos en la Heroica de Cartagena"
+    <meta content="Encuentra mas de 100 tours en Cartagena y disfruta de excursiones, pasadías para tu luna de miel, vacaciones ideales que podrás disfrutar en familia, aprovecha y conoce la historia de sus calles, de su ciudad amurallada."
         name="description">
     <meta property="og:title" content="Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen">
     <meta property="og:description"
-        content="Hoteles, albergues, hostales en Medellín, precios más baratos para los mas de 130 hoteles en Medellín 2022.">
+        content="Encuentra mas de 100 tours en Cartagena y disfruta de excursiones, pasadías para tu luna de miel, vacaciones ideales que podrás disfrutar en familia, aprovecha y conoce la historia de sus calles, de su ciudad amurallada.">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
@@ -71,14 +71,71 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Tour<span>Open</span></a>
+            <a href="index.html" class="navbar-brand"><img src="./img/touropen.png" alt="touropen"></a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a id="checkout" class="btn custom-btn" onclick="pay()" href="checkout.html">Checkout</a>
+                    <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                    <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Barú</a>
+                        <div class="dropdown-menu">
+                                    <a href="baru-playa-blanca.html" class="dropdown-item">Playa Blanca</a>
+                                    <a href="baru-aviario-nacional-de-colombia.html" class="dropdown-item">Aviario Nacional de Colombia</a>
+                                    <a href="baru-playa-puntilla.html" class="dropdown-item">Playa Puntilla</a>
+                                    <a href="baru-buceo-y-esnorquel.html" class="dropdown-item">Buceo y esnórquel</a>
+                                    <a href="baru-excursion-en-barco-privado.html" class="dropdown-item">Excursión en barco privado</a>
+                                    <a href="minicurso-de-buceo-en-baru.html" class="dropdown-item">Minicurso de Buceo en Barú</a>
+                        </div>
+                    </div>
+
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Islas del Rosario</a>
+                        <div class="dropdown-menu">
+                                    <a href="islas-del-rosario-oceanario.html" class="dropdown-item">Oceanario</a>
+                                    <a href="islas-del-rosario-bora-bora-beach-club-cartagena.html" class="dropdown-item">Bora Bora Beach club Cartagena</a>
+                                    <a href="islas-del-rosario-bendita-beach.html" class="dropdown-item">Bendita Beach</a>
+                                    <a href="islas-del-rosario-playa-dulce.html" class="dropdown-item">Playa Dulce</a>
+                                    <a href="islas-del-rosario-islabela.html" class="dropdown-item">IslaBela (Islas del Rosario)</a>
+                                    <a href="islas-del-rosario-borabora-beach-club.html" class="dropdown-item">Bora Bora Beach Club</a>
+                                    <a href="islas-del-rosario-cholon.html" class="dropdown-item">Cholon (Islas del Rosario)</a>
+                                    <a href="islas-del-rosario-isla-grande.html" class="dropdown-item">Isla Grande</a>
+                                    <a href="islas-del-rosario-isla-del-pirata.html" class="dropdown-item">Isla del Pirata</a>
+                        </div>
+                    </div>
+
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
+                        <div class="dropdown-menu">
+                                    <a href="tierra-bomba-bocachica-fuerte-de-san-bernardo.html" class="dropdown-item">Bocachica - Fuerte de San Bernardo</a>
+                                    <a href="tierra-bomba-punta-arena.html" class="dropdown-item">Punta Arena</a>
+                                    <a href="tierra-bomba-makani-luxury-beach-club.html" class="dropdown-item">Makani Luxury Beach Club</a>
+                                    <a href="tierra-bomba-marlin-beach-club.html" class="dropdown-item">Marlin Beach Club</a>
+                                    <a href="tierra-bomba-namaste-beach-club.html" class="dropdown-item">Námaste Beach Club</a>
+                                    <a href="tierra-bomba-tamarindo-beach-club.html" class="dropdown-item">Tamarindo Beach Club</a>
+                                    <a href="tierra-bomba-tour-extremo-con-cuatrimoto.html" class="dropdown-item">Tour Extremo con cuatrimoto</a>
+                                    <a href="ciclomontanismo-en-tierra-bomba.html" class="dropdown-item">Ciclomontañismo en Tierra Bomba (MountainBike)</a>
+                        </div>
+                    </div>
+
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Isla de San Bernardo</a>
+                        <div class="dropdown-menu">
+                                    <a href="isla-de-san-bernardo-isla-palma.html" class="dropdown-item">Isla Palma</a>
+                                    <a href="isla-de-san-bernardo-isla-mucura.html" class="dropdown-item">Isla Múcura</a>
+                                    <a href="hoteles-en-medellin.html" class="dropdown-item">Makani Luxury Beach Club</a>
+                                    <a href="hoteles-en-medellin.html" class="dropdown-item">Marlin Beach Club</a>
+                                    <a href="hoteles-en-medellin.html" class="dropdown-item">Námaste Beach Club</a>
+                                    <a href="hoteles-en-medellin.html" class="dropdown-item">Tamarindo Beach Club</a>
+                                    <a href="hoteles-en-medellin.html" class="dropdown-item">Tour Extremo con cuatrimoto</a>
+                                    <a href="hoteles-en-medellin.html" class="dropdown-item">Ciclomontañismo en Tierra Bomba (MountainBike)</a>
+                        </div>
+                    </div>
+
+                    <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
                 </div>
             </div>
         </div>
@@ -92,7 +149,7 @@
             <div class="owl-carousel">
                 <div class="carousel-item">
                     <div class="carousel-img">
-                        <img src="img/1 (1).jpg" alt="los mejores tures en playas de Cartagena 2022">
+                        <img src="img/1 (1).jpg" alt="los mejores tours en playas de Cartagena 2023">
                     </div>
                     <div class="carousel-text">
                         <h1 class="transparent">Mejores tures en Cartagena de Indias 2022</h1>
@@ -102,13 +159,13 @@
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap" rel="nofollow"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-img">
-                        <img src="img/2 (1).jpg" alt="tour en Cartagena">
+                        <img src="img/2 (1).jpg" alt="tours en Cartagena">
                     </div>
                     <div class="carousel-text">
                         <h2 class="h2">Adquiere <span>Descuentos</span> en TourOpen</h2>
@@ -117,22 +174,22 @@
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap" rel="nofollow"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-img">
-                        <img src="img/carousel-3.jpg" alt="pasadias en Cartagena 2022">
+                        <img src="img/carousel-3.jpg" alt="luna de miel en cartagena 2023">
                     </div>
                     <div class="carousel-text">
-                        <h2 class="h2">Tures <span>todo incluido</span></h2>
+                        <h2 class="h2">Tu <span>luna de miel</span> en Cartagena</h2>
                         <p>
-                            Adquiere tures a Islas con transporte, comida y cortesias.
+                            Adquiere tures a Islas con transporte, comida y cortesias en su día tan especial.
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap" rel="nofollow"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -242,17 +299,6 @@
         </div>
     </div>
     <!-- Blog End -->
-
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1528435702352043"
-        crossorigin="anonymous"></script>
-    <!-- horizontal -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1528435702352043" data-ad-slot="4513589680"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-
 
     <!-- Menu Start -->
     <div class="menu">
