--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
-    <title>Las MEJORES Excursiones, Tours y pasadias en Cartagena 2023 - TourOpen</title>
+    <title>Las MEJORES Excursiones, pasadias en Cartagena 2023 - TourOpen</title>
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
     <meta name="google-site-verification" content="moaq-zjEQeEECs574oodRtWr7fVVjgZu9tN5ZZdAVj4" />
@@ -79,7 +79,6 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                    <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Barú</a>
                         <div class="dropdown-menu">
@@ -135,7 +134,13 @@
                         </div>
                     </div>
 
-                    <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Nosotros</a>
+                        <div class="dropdown-menu">
+                                    <a href="about.html" class="dropdown-item">Sobre Nosotros</a>
+                                    <a href="contact.html" class="dropdown-item">Contáctanos</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,11 +154,10 @@
             <div class="owl-carousel">
                 <div class="carousel-item">
                     <div class="carousel-img">
-                        <img src="img/1 (1).jpg" alt="los mejores tours en playas de Cartagena 2023">
+                        <img src="img/tour-bora-bora-cartagena-2023.jpg" alt="los mejores tours en playas de Cartagena 2023">
                     </div>
                     <div class="carousel-text">
-                        <h1 class="transparent">Mejores tures en Cartagena de Indias 2022</h1>
-                        <h2 class="h2">Mejores <span>Tures</span> en Cartagena</h2>
+                        <h1 class="h2">Mejores <span>Excursiones, Tours</span> en Cartagena</h1>
                         <p>
                             TourOpen te ayudará en todo lo que necesites en Cartagena.
                         </p>
@@ -164,12 +168,12 @@
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-img">
-                        <img src="img/2 (1).jpg" alt="tours en Cartagena">
+                        <img src="img/baru-actividades-y-tours.jpg" alt="tours en Cartagena 2023">
                     </div>
                     <div class="carousel-text">
-                        <h2 class="h2">Adquiere <span>Descuentos</span> en TourOpen</h2>
+                        <h2 class="h2">Adquiere <span>Descuentos</span> en Tours</h2>
                         <p>
-                            Qué mejor que disfrutar con precios accesibles en nuestra tienda.
+                            Qué mejor que disfrutar con precios accesibles en TourOpen.
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
@@ -179,7 +183,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-img">
-                        <img src="img/carousel-3.jpg" alt="luna de miel en cartagena 2023">
+                        <img src="img/luna-de-miel-en-cartagena-2023.jpg" alt="luna de miel en cartagena 2023">
                     </div>
                     <div class="carousel-text">
                         <h2 class="h2">Tu <span>luna de miel</span> en Cartagena</h2>
