--- a/index.html
+++ b/index.html
@@ -557,28 +557,28 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="img/medellin.jpg" alt="10 Mejores Tures en Medellín" loading="lazy">
+                            <img src="img/luna-de-miel-en-cartagena.png" alt="luna de miel en cartagena 2023" loading="lazy">
                         </div>
                         <div class="blog-content">
-                            <h2 class="blog-title">Los 10 mejores Alojamientos en Medellín 2022</h2>
+                            <h2 class="blog-title">Luna de miel en Cartagena 2023 – Todo lo que debes saber</h2>
                             <div class="blog-meta">
                                 <p><i class="far fa-list-alt"></i>Admin - TourOpen</p>
-                                <p><i class="far fa-calendar-alt"></i>15-03-2022</p>
+                                <p><i class="far fa-calendar-alt"></i>15-12-2022</p>
                             </div>
                             <div class="blog-text">
                                 <p>
-                                    Encontrarás en Medellin los mejores Hoteles y hostales de esta ciudad.
-                                    Encuentra en Medellin Hostales económicos, Hoteles de lujo, Hoteles y Hostales con
-                                    piscina.
+                                    ¿estás pensando planear tu luna de miel en Cartagena? Nosotros te contamos porque Cartagena es la mejor ciudad para tu luna de miel, sabrás que plan para tu luna de miel en Cartagena existe y las recomendaciones que debes tener.
                                 </p>
-                                <a class="btn custom-btn" href="hoteles-en-medellin.html">Lo mejor de Medellín</a>
+                                <a class="btn custom-btn" href="luna-de-miel-en-cartagena-2023-todo-lo-que-debes-saber.html">Luna de miel</a>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
@@ -589,7 +589,7 @@
         <div class="container">
             <div class="section-header text-center">
                 <p>Tures</p>
-                <h2>Playas y Islas para visitar en Cartagena</h2>
+                <h2>Islas y Playas para visitar en Cartagena</h2>
             </div>
             <div class="menu-tab">
                 <ul class="nav nav-pills justify-content-center">
@@ -736,7 +736,7 @@
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href="https://www.instagram.com/touropen_ctg/?next=%2F"><i class="bi bi-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
