frag destacados inclu

--- a/baru-playa-blanca.html
+++ b/baru-playa-blanca.html
@@ -4,6 +4,49 @@
 <head>
     <meta charset="utf-8">
     <title>Playa Blanca Barú - ¿La mejor opción en 2023?</title>
+    {
+        "@context": "https://schema.org/",
+        "@type": "Product",
+        "name": "Playa Blanca Barú - ¿La mejor opción en 2023?",
+        "image": [
+          "https://toursopen.netlify.app/img/playa-blanca-imagen.png",
+          "https://toursopen.netlify.app/img/playa-blanca.png",
+          "https://toursopen.netlify.app/img/playa-blanca-2023.png"
+         ],
+        "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
+        "sku": "0160775449",
+        "mpn": "440112",
+        "brand": {
+          "@type": "Brand",
+          "name": "TourOpen"
+        },
+        "review": {
+          "@type": "Review",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "4",
+            "bestRating": "5"
+          },
+          "author": {
+            "@type": "Person",
+            "name": "Santicl"
+          }
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.1",
+          "reviewCount": "12"
+        },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://toursopen.netlify.app/baru-playa-blanca.html",
+          "priceCurrency": "COP",
+          "price": "90.000",
+          "priceValidUntil": "2022-11-20",
+          "itemCondition": "https://schema.org/UsedCondition",
+          "availability": "https://schema.org/InStock"
+        }
+      }
     <script defer src="js/carrousel.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Cartagena, Colombia, Hotels, Hoteles en Cartagena, hostal, hostales en cartagena, bed and breakfast, resort, alojamiento, vacaciones, ofertas, paquetes en Cartagena, vacaciones en Cartagena, hostal, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, paquete, paquetes, paquetes de tures, tures en cartagena, tures, tour" name="keywords">
@@ -264,23 +307,22 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/viajero.jpg" alt="el viajero hotel" loading="lazy">
+                                        <img src="img/playa-blanca-imagen.png" alt="tour baru playa blanca" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>Hotel El Viajero Centro</span> <strong>$251.520</strong></h3>
+                                        <h3><span> Playa Blanca</span> <strong>$90.000</strong></h3>
                                         <p>8,3</p>
-                                        <p>3 camas, 1 baño interno - <strong>Sin pago por adelantado, cancelación
-                                                gratis.</strong></p>
+                                        <p>Transporte terrestre, almuerzo, <strong>no incluye transporte maritimo</strong></p>
                                     </div>
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/1850.jpg" alt="Hotel Ayenda Casa Cano 1805" loading="lazy">
+                                        <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Barú + Plancton Luminoso" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>Hotel Ayenda Casa Cano 1805</span> <strong>$134.500</strong></h3>
+                                        <h3><span>Barú + Plancton Luminoso</span> <strong>$150.000</strong></h3>
                                         <p>8,0</p>
-                                        <p>Cama doble - <strong>Sin pago por adelantado, cancelación gratis.</strong>
+                                        <p>Transporte. sillas, almuerzo, refrigerio, Planckton
                                         </p>
                                     </div>
                                 </div>
@@ -289,20 +331,18 @@
                                         <img src="img/suite.jpg" alt="Ganem Suites Cartagena" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>Ganem Suites Cartagena</span> <strong>$213.320</strong></h3>
-                                        <p>Suite privada - 1 dormitorio (2 camas), 1 sala de estar, 1 baño -
-                                            <strong>cancelación gratis.</strong>
+                                        <h3><span>Barú + Islas del Rosario</span> <strong>$130.000</strong></h3>
+                                        <p>Transporte terrestre a barú, almuerzo, recorrido, transporte nautico islas del rosario
                                         </p>
                                     </div>
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/cecilia.jpg" alt="Hotel Santa Cecilia B&B" loading="lazy">
+                                        <img src="img/5_islas_en_cartagena_2022.jpg" alt="Tour 4 Islas" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>Hotel Santa Cecilia B&B</span> <strong>$264.960</strong></h3>
-                                        <p>habitación Deluxe (1 cama doble extragrande) - <strong>Desayuno incluido,
-                                                cancelación gratis.</strong></p>
+                                        <h3><span>Tour 4 Islas</span> <strong>$250.000</strong></h3>
+                                        <p>Recogida al hotel, transporte nautico en playas, panoramico, Snorkel con foto, coctel de camaron (cholon), playa tranquila, almuerzo (pollo, pescado o vegetariano), uso de instalaciones en el hostal</p>
                                     </div>
                                 </div>
                                 <div class="menu-item">
@@ -351,22 +391,20 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/1811.jpg" alt="Hostal 1811" loading="lazy">
+                                        <img src="img/cristal-blue-baru-hotel.webp" alt="cristal blue baru hotel" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>Hostal 1811</span> <strong>$99.000</strong></h3>
-                                        <p>1 Cama doble grande - <strong>Desayuno incluido, Sin pago por adelantado,
-                                                cancelación gratis.</strong></p>
+                                        <h3><span>Cristal Blue Baru Hotel Boutique</span> <strong>$300.000</strong></h3>
+                                        <p>Habitación triple (2 camas) - <strong>Desayuno incluido.</strong></p>
                                     </div>
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/sanjacinto.jpg" alt="SAN JACINTO HOSTEL" loading="lazy">
+                                        <img src="img/Raw-KokoMar-Posada-Boutique.webp" alt="Raw KokoMar Posada Boutique" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>SAN JACINTO HOSTEL</span> <strong>$76.000</strong></h3>
-                                        <p>Cama en habitación compartida - <strong>Desayuno incluido, Sin pago por
-                                                adelantado, cancelación gratis.</strong></p>
+                                        <h3><span>Raw KokoMar Posada Boutique</span> <strong>$150.000</strong></h3>
+                                        <p>Habitación Doble Deluxe con balcón y vistas al mar - <strong>Desayuno incluido.</strong></p>
                                     </div>
                                 </div>
                                 <div class="menu-item">
@@ -374,8 +412,8 @@
                                         <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
-                                        <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
-                                        <p>1 cama doble grande - <strong>Cancelación gratis.</strong></p>
+                                        <h3><span>The Wizard & Bar BARU</span> <strong>$86.000</strong></h3>
+                                        <p>1 cama doble grande - <strong>Cancelación gratis, sin pago por adelantado.</strong></p>
                                     </div>
                                 </div>
                             </div>
