--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Las MEJORES Excursiones, pasadias en Cartagena 2023 - TourOpen</title>
+    <title>TourOpen - Las MEJORES Excursiones, pasadias en Cartagena 2023</title>
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
     <meta name="google-site-verification" content="moaq-zjEQeEECs574oodRtWr7fVVjgZu9tN5ZZdAVj4" />
@@ -530,8 +530,8 @@
     <div class="blog">
         <div class="container">
             <div class="section-header text-center">
-                <p>Alojamientos</p>
-                <h2>Hospedaje en las mejores ciudades de Colombia</h2>
+                <p>Planes</p>
+                <h2>Alojamientos y planes en Cartagena de indias</h2>
             </div>
             <div class="row">
                 <div class="col-md-6">
@@ -540,7 +540,7 @@
                             <img src="img/aloja.jpg" alt="10 Mejores Tures en cartagena de indias" loading="lazy">
                         </div>
                         <div class="blog-content">
-                            <h2 class="blog-title">Los 10 mejores Alojamientos en Cartagena 2022</h2>
+                            <h2 class="blog-title">Los 10 mejores Alojamientos en Cartagena 2023</h2>
                             <div class="blog-meta">
                                 <p><i class="far fa-list-alt"></i>Admin - TourOpen</p>
                                 <p><i class="far fa-calendar-alt"></i>15-03-2022</p>
@@ -571,9 +571,13 @@
                             </div>
                             <div class="blog-text">
                                 <p>
-                                    ¿estás pensando planear tu luna de miel en Cartagena? Nosotros te contamos porque Cartagena es la mejor ciudad para tu luna de miel, sabrás que plan para tu luna de miel en Cartagena existe y las recomendaciones que debes tener.
+                                    ¿Estás pensando planear <strong>tu luna de miel en Cartagena</strong>? Nosotros te contamos porque Cartagena es la mejor ciudad para tu luna de miel, sabrás que plan para tu luna de miel en Cartagena existe y las recomendaciones que debes tener, además, <strong>te asesoramos gratis</strong>.
                                 </p>
-                                <a class="btn custom-btn" href="luna-de-miel-en-cartagena-2023-todo-lo-que-debes-saber.html">Luna de miel</a>
+                                <div class="blog-meta" style="display: flex; justify-content: space-between;">
+                                    <a class="btn custom-btn" href="luna-de-miel-en-cartagena-2023-todo-lo-que-debes-saber.html">Ver</a>
+                                    <a style="background-color: #719a0a; border: none;" target="_blank" class="btn custom-btn" href="https://bit.ly/touropen-contactar"
+                                rel="nofollow"><i class="bi bi-whatsapp"></i> Asesoría</a>
+                                </div>
                             </div>
                         </div>
                     </div>
