--- a/baru-playa-blanca.html
+++ b/baru-playa-blanca.html
@@ -4,49 +4,51 @@
 <head>
     <meta charset="utf-8">
     <title>Playa Blanca Barú - ¿La mejor opción en 2023?</title>
-    {
-        "@context": "https://schema.org/",
-        "@type": "Product",
-        "name": "Playa Blanca Barú - ¿La mejor opción en 2023?",
-        "image": [
-          "https://toursopen.netlify.app/img/playa-blanca-imagen.png",
-          "https://toursopen.netlify.app/img/playa-blanca.png",
-          "https://toursopen.netlify.app/img/playa-blanca-2023.png"
-         ],
-        "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
-        "sku": "0160775449",
-        "mpn": "440112",
-        "brand": {
-          "@type": "Brand",
-          "name": "TourOpen"
-        },
-        "review": {
-          "@type": "Review",
-          "reviewRating": {
-            "@type": "Rating",
-            "ratingValue": "4",
-            "bestRating": "5"
-          },
-          "author": {
-            "@type": "Person",
-            "name": "Santicl"
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "Product",
+            "name": "Playa Blanca Barú - ¿La mejor opción en 2023?",
+            "image": [
+              "https://toursopen.netlify.app/img/playa-blanca-imagen.png",
+              "https://toursopen.netlify.app/img/playa-blanca.png",
+              "https://toursopen.netlify.app/img/playa-blanca-2023.png"
+             ],
+            "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
+            "sku": "0160775449",
+            "mpn": "440112",
+            "brand": {
+              "@type": "Brand",
+              "name": "TourOpen"
+            },
+            "review": {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "4",
+                "bestRating": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "Santicl"
+              }
+            },
+            "aggregateRating": {
+              "@type": "AggregateRating",
+              "ratingValue": "4.1",
+              "reviewCount": "12"
+            },
+            "offers": {
+              "@type": "Offer",
+              "url": "https://toursopen.netlify.app/baru-playa-blanca.html",
+              "priceCurrency": "COP",
+              "price": "90.000",
+              "priceValidUntil": "2022-11-20",
+              "itemCondition": "https://schema.org/UsedCondition",
+              "availability": "https://schema.org/InStock"
+            }
           }
-        },
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "4.1",
-          "reviewCount": "12"
-        },
-        "offers": {
-          "@type": "Offer",
-          "url": "https://toursopen.netlify.app/baru-playa-blanca.html",
-          "priceCurrency": "COP",
-          "price": "90.000",
-          "priceValidUntil": "2022-11-20",
-          "itemCondition": "https://schema.org/UsedCondition",
-          "availability": "https://schema.org/InStock"
-        }
-      }
+    </script>
     <script defer src="js/carrousel.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Cartagena, Colombia, Hotels, Hoteles en Cartagena, hostal, hostales en cartagena, bed and breakfast, resort, alojamiento, vacaciones, ofertas, paquetes en Cartagena, vacaciones en Cartagena, hostal, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, paquete, paquetes, paquetes de tures, tures en cartagena, tures, tour" name="keywords">
