playa blanca sec

--- a/baru-aviario-nacional-de-colombia.html
+++ b/baru-aviario-nacional-de-colombia.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Playa Puntilla Barú</title>
+    <title>Aviario nacional de Colombia</title>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "Playa Puntilla Barú",
+            "name": "Aviario nacional de Colombia",
             "image": [
-              "https://toursopen.netlify.app/img/playa-puntilla-cartagena-2023.png"
+              "https://toursopen.netlify.app/img/aviario-nacional-de-colombia-2023.png"
              ],
             "description": "Disfruta de 2 ecosistemas y 22 exhibiciones en el aviario nacional de colombia, veras 170 especies y 1.700 ejemplares de aves.",
-            "sku": "1110235400",
-            "mpn": "254111",
+            "sku": "0555410087",
+            "mpn": "331000",
             "brand": {
               "@type": "Brand",
               "name": "TourOpen"
@@ -33,14 +33,14 @@
             },
             "aggregateRating": {
               "@type": "AggregateRating",
-              "ratingValue": "4.0",
+              "ratingValue": "4.7",
               "reviewCount": "8"
             },
             "offers": {
               "@type": "Offer",
-              "url": "https://toursopen.netlify.app/baru-playa-puntilla.html",
+              "url": "https://toursopen.netlify.app/baru-aviario-nacional-de-colombia.html",
               "priceCurrency": "COP",
-              "price": "125.000",
+              "price": "120.000",
               "priceValidUntil": "2022-11-20",
               "itemCondition": "https://schema.org/UsedCondition",
               "availability": "https://schema.org/InStock"
